--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@reach/router": "^1.2.1",
     "bootstrap": "^4.3.1",
+    "core-js": "^3.6.4",
     "date-fns": "^2.4.1",
     "http-proxy-middleware": "^0.20.0",
     "query-string": "6.9.0",
